Ensure list choice options can wrap

--- a/MaterialSkin/HTML/material/html/css/style.css
+++ b/MaterialSkin/HTML/material/html/css/style.css
@@ -1850,16 +1850,17 @@ div.v-subheader {
 }
 
 .sleep-list .v-list__tile {
- padding:4px 0px 4px 8px;
+ padding:4px 8px 4px 8px;
  height: auto;
  min-height: 48px;
  max-height: 192px;
 }
 
-.sleep-list .v-list__tile__content {
+.sleep-list .v-list__tile__title {
  white-space: normal !important;
  overflow: auto !important;
  text-overflow: initial !important;
+ height:auto !important;
 }
 
 .browse-action {
